--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4,3 +4,12 @@
     height: 200px;
     object-fit: cover;
 }
+
+#text-truncate-lines {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-word;
+}
