--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -74,7 +74,7 @@ html {
     position: relative;
     width: 100%;
     height: 600px;
-    background-image: url('/public/images/Banner\ tech.png');
+    background-color: #1a1a1a; /* Cor de fundo enquanto carrega */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
